--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
   "short_name": "HasithaCharaka",
   "start_url": "index.html",
   "display": "standalone",
-  "background_color": "#fdfdfd",
-  "theme_color": "#db4938",
+  "background_color": "#2b2b2b",
+  "theme_color": "#2b2b2b",
   "orientation": "portrait-primary",
   "icons": [
     {
